<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@drawable/custom_story_container"
    android:paddingVertical="15dp">

    <ImageView
        android:id="@+id/default_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/content_description_avatar"
        android:transitionName="user_avatar"
        app:layout_constraintBottom_toTopOf="@+id/iv_item_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bot" />

    <ImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:contentDescription="@string/content_description_image_story"
        android:scaleType="centerCrop"
        android:transitionName="story_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_avatar"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:maxLines="1"
        android:text="@string/const_person_name"
        android:textColor="@color/navy_200"
        android:textSize="18sp"
        android:transitionName="user_name"
        app:layout_constraintBottom_toBottomOf="@+id/default_avatar"
        app:layout_constraintStart_toEndOf="@+id/default_avatar"
        app:layout_constraintTop_toTopOf="@+id/default_avatar" />

    <TextView
        android:id="@+id/tv_item_desciption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:transitionName="story_upload_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_item_photo"
        tools:text="diupload beberapa waktu lalu" />


</androidx.constraintlayout.widget.ConstraintLayout>
